tests/fixtures/invalid/round_bool_float.py
# Cannot call round() with Bool, Float
x = round(True, 1.0)
